# parallel-processing

./: .gitignore  MISSION.md  NOTES.md  README.md  REPRODUCE.md  RESOURCES.md  TODO.md  flake.nix  pyproject.toml
.github/workflows/: deploy-pages.yml
artifacts/: bron-kerbosch-deepdive.html  bron-kerbosch.html  env-snapshot-shm-bench.txt  phase-profile.csv  workload-ca-AstroPh.csv  workload-ca-HepPh.csv  workload-summary.json
assets/: lesson.css  quiz.js  scheduler.js  style.css
docs/: eppstein-experiments.md  references.md
docs/artifacts/: bron-kerbosch-guide.html  bron-kerbosch-pivot-visualizer.html  bron-kerbosch-visualizer.html
docs/common/: 基本方針.md
docs/learnigs/: day0.md  day1.md
docs/plans/: cliques-benchmark-next.md  cliques-benchmark.md  cliques-parallelization-ideas.md  session-handoff-2026-07-06.md
docs/slides/: enumeration-motivation.html  pcam.html
learning-records/: 0001-degeneracy-definition-confusion.md  0001-root-split-slower-than-sequential.md  0002-outermost-layer.md  0003-batch-strategies-and-pe-cores.md
lessons/: 0001-degeneracy-peeling.html  0001-root-split-parallel-cliques.html  0002-outermost-layer.html  0002-why-root-split-was-slower.html  0003-batch-strategies.html
reference/: batch-strategies.html
src/parallel_processing/: __init__.py  benchmark.py  benchmark_eppstein.py  (+16 more)
tests/: test_bron_kerbosch.py  test_cliques.py  test_cliques_parallel.py  test_eppstein.py  test_eppstein_parallel.py  test_graph_gen.py  test_greet.py  test_workload_profile.py
thesis/: .gitignore  .latexmkrc  Makefile  main.tex  refs.bib  slides.pptx
(+10 files in other folders)
